# forecast_model_api

./: .gitignore  Dockerfile  README.md  pyproject.toml  start-minikube.sh
.github/workflows/: ci.yml  docker-publish.yml  pytest.yml
analysis/: Analysis.md  demand-forecasting.ipynb  lgb_bayasian_param.csv  lgbm_model.txt  light-gbm-demand-forecasting.ipynb
docs/: containers.md
infra/: Makefile
infra/terraform/: main.tf  provider.tf  variables.tf
output/: Submission.csv
src/: app.py  app_logger.py
tests/: test_version_v1.py
