[project]
name = "forecast-model-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "lightgbm>=4.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
analysis = [
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "nbformat>=5.10.4",
    "xgboost>=3.0.2",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.4",
]
dev = [
    "isort>=6.0.1",
]
